RESOLVED FIXED34327
[Gtk] Vimeo HTML5 player doesn't work
https://bugs.webkit.org/show_bug.cgi?id=34327
Summary [Gtk] Vimeo HTML5 player doesn't work
Philippe Normand
Reported 2010-01-29 05:04:45 PST
Because our GStreamer based media player doesn't send the HTTP referrer when requesting to play the video.
Attachments
Send Referer when requesting media over HTTP (7.35 KB, patch)
2010-01-29 06:20 PST, Philippe Normand
gustavo: review+
gustavo: commit-queue-
Philippe Normand
Comment 1 2010-01-29 06:20:54 PST
Created attachment 47713 [details] Send Referer when requesting media over HTTP
Gustavo Noronha (kov)
Comment 2 2010-01-29 06:42:34 PST
Comment on attachment 47713 [details] Send Referer when requesting media over HTTP  166 gchar* referer = g_strdup(document->documentURI().utf8().data());  167 g_printerr("Referer: %s\n", referer); As discussed on IRC, drop the referer variable, and the g_strdup, and pass document->documentURI().utf8().data() directly to gst_structure_new. Also remove the g_printerr =).
Philippe Normand
Comment 3 2010-01-29 07:05:19 PST
Landed in r54061. Thanks
Note You need to log in before you can comment on or make changes to this bug.