2010-01-29  Philippe Normand  <pnormand@igalia.com>

Reviewed by Gustavo Noronha Silva.

        [Gtk] Vimeo HTML5 player doesn't work
        https://bugs.webkit.org/show_bug.cgi?id=34327

        Send Referer when requesting media over HTTP.

        Test: http/tests/media/video-referer.html

        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::mediaPlayerPrivateSourceChangedCallback):

2010-01-29  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        [Gtk] Vimeo HTML5 player doesn't work
        https://bugs.webkit.org/show_bug.cgi?id=34327

        Test for HTTP Referer checking when playing remote media.

        * http/tests/media/resources/setCookieAndReferer.cgi: Added.
        * http/tests/media/resources/video-referer-check-referer.php: Added.
        * http/tests/media/video-referer-expected.txt: Added.
        * http/tests/media/video-referer.html: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@54061 bbb929c8-8fbe-4397-9dbb-9b2b20218538