third_party/WebKit/LayoutTests/http/tests/media/resources/setCookieAndReferer.cgi
@@ -1,0 +1,16 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+#!/usr/bin/perl -wT
+use CGI;
+
+$query = new CGI;
+$name = $query->param('name');
+$referer = $query->param('referer');
+
+print "Content-Type: text/plain\n";
+print "Cache-Control: no-store\n";
+print 'Cache-Control: no-cache="set-cookie"' . "\n";
+
+print "Referer: ${referer}\n";
+
+# We only map the SET_COOKIE request header to "Set-Cookie"
+print "Set-Cookie: TEST=${name}\n\n";
